# tapir

./: .gitignore  CMakeLists.txt  Makefile  Makefile.common  README.html  README.md  README_DOXYGEN.md  Rules.mk  github_links.md  mappings.imp  package.xml  polTransPrj  readme.txt
.make/: README.html  README.md  beautify-settings.mk  beautify.mk  build.mk  mappings.imp  problem-template.mk  redirect.mk  stack.mk  template.mk
.ros-scripts/: .rosinstall  build_boost_148.sh  build_vrep_plugin.sh  get_boost_148.sh  patch_boost_148.sh  run.sh
cfg/homecare/: default.cfg
cfg/homecare/changes/: change.txt
cfg/homecare/maps/: pathMap.txt
cfg/rocksample/: default.cfg
cfg/rocksample/maps/: map-11-11.txt  map-7-2.txt  map-7-3.txt
cfg/tag/: default.cfg
docs/: ._README-MakeNewModel.html  ._README-MakeNewModel.md  BUILD_README.md  Doxyfile  Makefile  Making_A_New_Model.html  Making_A_New_Model.md  Overview.html  Overview.md  README-MakeNewModel.html  README-MakeNewModel.md  README-RosTag.html  README-RosTag.md  README.html  README.md  ROS_VREP_Guide.html  ROS_VREP_Guide.md  doxygen_links.md  style.css
docs/doxygen_links/: Build_System.md  New_Model.md  Overview.md  Quick_Start.md  Ros_Tag.md
html/: ActionMappingEntry_8hpp.html  ActionMappingEntry_8hpp_source.html  ActionMapping_8hpp.html  ActionMapping_8hpp_source.html  ActionNode_8cpp.html  ActionNode_8cpp_source.html  ActionNode_8hpp.html  ActionNode_8hpp_source.html  ActionPool_8hpp.html  ActionPool_8hpp_source.html  Action_8hpp.html  Action_8hpp_source.html  Agent_8cpp.html  Agent_8cpp_source.html  Agent_8hpp.html  Agent_8hpp_source.html  BUILD_8md_source.html  BUILD__README_8md_source.html  BeliefNode_8cpp.html  BeliefNode_8cpp_source.html  BeliefNode_8hpp.html  BeliefNode_8hpp_source.html  BeliefTree_8cpp.html  BeliefTree_8cpp_source.html  BeliefTree_8hpp.html  BeliefTree_8hpp_source.html  Build__System_8md_source.html  ChangeFlags_8hpp.html  ChangeFlags_8hpp_source.html  DefaultHistoryCorrector_8cpp.html  DefaultHistoryCorrector_8cpp_source.html  DefaultHistoryCorrector_8hpp.html  DefaultHistoryCorrector_8hpp_source.html  DiscretizedPoint_8cpp.html  DiscretizedPoint_8cpp_source.html  DiscretizedPoint_8hpp.html  DiscretizedPoint_8hpp_source.html  FlaggingVisitor_8cpp.html  FlaggingVisitor_8cpp_source.html  FlaggingVisitor_8hpp.html  (+642 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+72 more)
launch/: husky_vrep.launch  tag.launch  tracker.launch  tracker_zones.launch
license/: ._license.txt  license.txt
mk/: stack.mk  template.mk  uncrustify.cfg
problems/: GridPosition.hpp  Makefile  Rules.mk  VectorState.hpp  template.mk
problems/RockSample/: Makefile  Makefile.dep  RockSampleModel.cc  RockSampleModel.h  Rules.mk  core  options.h  simulate.cc  solve.cc
problems/RockSample/src/: RockSampleModel.cc  RockSampleModel.cpp  RockSampleModel.h  RockSampleModel.hpp  RockSampleOptions.hpp  RockSampleState.cpp  RockSampleState.hpp  RockSampleTextSerializer.cpp  RockSampleTextSerializer.hpp  options.h  simulate.cc  simulate.cpp  solve.cc  solve.cpp
problems/RockSample/tests/: default.cfg  param-v0.ini
problems/Tag/: Makefile  Rules.mk
problems/Tag/src/: TagModel.cc  TagModel.cpp  TagModel.h  TagModel.hpp  TagOptions.hpp  TagState.cpp  TagState.hpp  options.h  (+6 more)
problems/UnderwaterNavModif/: Makefile  Rules.mk
problems/conttag/: Makefile  default.cfg
problems/homecare/: Makefile  default.cfg
problems/pushbox/: Makefile  default.cfg
problems/rocksample/: Makefile  default-11-11.cfg  default.cfg
problems/tag/: Makefile  default.cfg  simulate-ros  tag_ros.sh
problems/tracker/: default.cfg  simulate-ros
problems/underwaterNavModif/: GetStat.java  Makefile  Makefile.dep  StRoadmap.cc  StRoadmap.h  UnderwaterNavModifModel.cc  UnderwaterNavModifModel.h  coba.txt  options.h  runAnEpoch  runBatch  runBatch2  runBatch5  simulate.cc  solve.cc  sumGetStat  test.cc
src/: Action.cc  Action.h  ActionNode.cc  ActionNode.cpp  ActionNode.h  ActionNode.hpp  BeliefNode.cc  BeliefNode.cpp  BeliefNode.h  BeliefNode.hpp  BeliefTree.cc  BeliefTree.cpp  BeliefTree.h  BeliefTree.hpp  GlobalResources.cc  GlobalResources.cpp  GlobalResources.h  GlobalResources.hpp  Histories.cc  Histories.cpp  Histories.h  Histories.hpp  HistoryEntry.cc  HistoryEntry.cpp  HistoryEntry.h  HistoryEntry.hpp  HistorySeq.cc  HistorySeq.h  HistorySequence.cc  HistorySequence.cpp  HistorySequence.h  HistorySequence.hpp  LinkedHashSet.hpp  Makefile  Model.h  Model.hpp  Observation.cc  Observation.h  Observation.hpp  ObservationEdge.cc  (+41 more)
src/options/: Makefile  defs.hpp  option_parser.cpp  option_parser.hpp
src/problems/: GridPosition.hpp  Makefile  ModelWithProgramOptions.hpp  ProgramOptions.hpp  Rules.mk  VectorState.hpp  simulate.hpp  solve.hpp
src/solver/: Action.cpp  Action.hpp  ActionMapping.hpp  ActionNode.cpp  ActionNode.hpp  ActionPool.hpp  AffectedStateSet.hpp  Agent.cpp  Agent.hpp  ApproxObsMap.cpp  ApproxObsMap.hpp  BeliefNode.cpp  BeliefNode.hpp  BeliefTree.cpp  BeliefTree.hpp  BoxQuery.cpp  BoxQuery.hpp  CachedValue.hpp  Change.hpp  ChangeFlags.hpp  ChangeType.hpp  DefaultHistoryCorrector.cpp  DefaultHistoryCorrector.hpp  DiscreteActionMap.cpp  DiscreteActionMap.hpp  DiscreteObservationMap.cpp  DiscreteObservationMap.hpp  EnumeratedPoint.cpp  EnumeratedPoint.hpp  FlaggingVisitor.cpp  FlaggingVisitor.hpp  Histories.cpp  Histories.hpp  HistoryEntry.cpp  HistoryEntry.hpp  HistorySequence.cpp  HistorySequence.hpp  Makefile  Model.cpp  Model.hpp  (+59 more)
src/spc/: Makefile  maketest.cpp
vrep-scenarios/: empty.ttt  factory.ttt  factory2.ttt  tag.ttt  zones.ttt
vrep-scenarios/CAD/: Gabelstapler.stl  Roller Conveyor.STL
(+497 files in other folders)
